[gd_scene load_steps=15 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/COMIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Styles/UI.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/Equipments.gd" type="Script" id=4]
[ext_resource path="res://Scripts/PrimaryTab.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Theme" id=5]
Panel/styles/panel = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 47
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:anchor_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:margin_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:margin_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:margin_right")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:margin_bottom")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "ToHangar"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1920, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "to_hangar"
} ]
}

[node name="Equipments" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 12

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 85.0
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
modulate = Color( 0.870588, 0.00784314, 0.00784314, 1 )
margin_right = 150.0
margin_bottom = 85.0
rect_min_size = Vector2( 150, 85 )
icon = ExtResource( 1 )
flat = true
icon_align = 1
expand_icon = true

[node name="Equipments" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 154.0
margin_right = 1853.0
margin_bottom = 85.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Equipments"
align = 1
valign = 1
uppercase = true

[node name="ShipEquipmentCapacity" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 1857.0
margin_right = 1920.0
margin_bottom = 85.0
grow_horizontal = 0
alignment = 1

[node name="UsedCapacity" type="Label" parent="VBoxContainer/HBoxContainer2/ShipEquipmentCapacity"]
margin_top = 17.0
margin_right = 16.0
margin_bottom = 67.0
grow_horizontal = 0
text = "1"
align = 1
valign = 1

[node name="Divider" type="Label" parent="VBoxContainer/HBoxContainer2/ShipEquipmentCapacity"]
margin_left = 20.0
margin_top = 17.0
margin_right = 38.0
margin_bottom = 67.0
grow_horizontal = 0
text = "/"
align = 1
valign = 1

[node name="TotalCapacity" type="Label" parent="VBoxContainer/HBoxContainer2/ShipEquipmentCapacity"]
margin_left = 42.0
margin_top = 17.0
margin_right = 63.0
margin_bottom = 67.0
grow_horizontal = 0
text = "2"
align = 1
valign = 1

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_top = 97.0
margin_right = 1920.0
margin_bottom = 1080.0
grow_horizontal = 2
size_flags_vertical = 3

[node name="Primary" type="Tabs" parent="VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 61.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Primary"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -147.0

[node name="ThumbnailPanel" type="Panel" parent="VBoxContainer/TabContainer/Primary/HBoxContainer"]
margin_right = 600.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 600 )
size_flags_vertical = 0
theme = SubResource( 5 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/ThumbnailPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/TabContainer/Primary/HBoxContainer"]
margin_left = 604.0
margin_right = 1208.0
margin_bottom = 771.0
size_flags_horizontal = 3

[node name="Locked" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/CenterContainer"]
visible = false
margin_left = 126.0
margin_top = 322.0
margin_right = 478.0
margin_bottom = 449.0
custom_fonts/font = SubResource( 6 )
text = "Locked"
align = 1
valign = 1
uppercase = true

[node name="StatsPanel" type="Panel" parent="VBoxContainer/TabContainer/Primary/HBoxContainer"]
margin_left = 1212.0
margin_right = 1912.0
margin_bottom = 600.0
rect_min_size = Vector2( 700, 600 )
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 0

[node name="StatsLabel" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer"]
margin_right = 660.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 7 )
text = "Stats"
align = 1
valign = 1
uppercase = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer"]
margin_top = 85.0
margin_right = 660.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer"]
margin_top = 90.0
margin_right = 660.0
margin_bottom = 480.0
custom_constants/separation = 24

[node name="PWName" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer"]
margin_right = 660.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 9 )
text = "PW NAME"
align = 1
valign = 1
uppercase = true

[node name="MaxAmmoHoldable" type="HBoxContainer" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 660.0
margin_bottom = 147.0
custom_constants/separation = 40

[node name="MAHText" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/MaxAmmoHoldable"]
margin_right = 391.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 8 )
text = "Max Ammo Holdable:"

[node name="MAHValue" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/MaxAmmoHoldable"]
margin_left = 431.0
margin_right = 660.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
align = 2
valign = 1

[node name="MagSize" type="HBoxContainer" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 660.0
margin_bottom = 228.0
custom_constants/separation = 40

[node name="MSText" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/MagSize"]
margin_right = 279.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 8 )
text = "Magazine Size:"

[node name="MSValue" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/MagSize"]
margin_left = 319.0
margin_right = 660.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
align = 2
valign = 1

[node name="ReloadSpeed" type="HBoxContainer" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 660.0
margin_bottom = 309.0
custom_constants/separation = 40

[node name="RSText" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/ReloadSpeed"]
margin_right = 264.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 8 )
text = "Reload Speed:"

[node name="RSValue" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/ReloadSpeed"]
margin_left = 304.0
margin_right = 660.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
align = 2
valign = 1

[node name="FiringRate" type="HBoxContainer" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer"]
margin_top = 333.0
margin_right = 660.0
margin_bottom = 390.0
custom_constants/separation = 40

[node name="FRText" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/FiringRate"]
margin_right = 217.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 8 )
text = "Firing Rate:"

[node name="FRValue" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer/StatsPanel/VBoxContainer/VBoxContainer/FiringRate"]
margin_left = 257.0
margin_right = 660.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
align = 2
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/TabContainer/Primary"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -948.0
margin_top = 150.0
margin_right = 947.0
margin_bottom = 227.0
custom_constants/separation = 28
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Primary/HBoxContainer2"]
margin_right = 1664.0
margin_bottom = 77.0
size_flags_horizontal = 3
alignment = 1

[node name="WeaponCount" type="HBoxContainer" parent="VBoxContainer/TabContainer/Primary/HBoxContainer2/HBoxContainer"]
margin_left = 793.0
margin_right = 870.0
margin_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 11
alignment = 1

[node name="EquipCount" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer2/HBoxContainer/WeaponCount"]
margin_top = 13.0
margin_right = 16.0
margin_bottom = 63.0
text = "1"

[node name="Divider" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer2/HBoxContainer/WeaponCount"]
margin_left = 27.0
margin_top = 13.0
margin_right = 45.0
margin_bottom = 63.0
text = "/"

[node name="MaxCount" type="Label" parent="VBoxContainer/TabContainer/Primary/HBoxContainer2/HBoxContainer/WeaponCount"]
margin_left = 56.0
margin_top = 13.0
margin_right = 77.0
margin_bottom = 63.0
text = "3"

[node name="PWeaponAddButton" type="Button" parent="VBoxContainer/TabContainer/Primary/HBoxContainer2"]
margin_left = 1692.0
margin_right = 1756.0
margin_bottom = 77.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 64, 0 )
text = "Add"

[node name="PWeaponRemoveButton" type="Button" parent="VBoxContainer/TabContainer/Primary/HBoxContainer2"]
margin_left = 1784.0
margin_right = 1895.0
margin_bottom = 77.0
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 64, 0 )
text = "Remove"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/Primary"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -132.0
rect_min_size = Vector2( 0, 120 )
follow_focus = true
scroll_vertical_enabled = false

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/TabContainer/Primary/ScrollContainer"]
margin_right = 1920.0
margin_bottom = 120.0
rect_min_size = Vector2( 1920, 120 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Primary/ScrollContainer/CenterContainer"]
margin_left = 960.0
margin_right = 960.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
custom_constants/separation = 18
alignment = 1

[node name="IconTemp" type="TextureButton" parent="VBoxContainer/TabContainer/Primary/ScrollContainer/CenterContainer/HBoxContainer"]
visible = false
margin_right = 384.0
margin_bottom = 120.0
rect_min_size = Vector2( 384, 0 )
texture_normal = ExtResource( 1 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/ToHangar = SubResource( 11 )

[connection signal="button_up" from="VBoxContainer/HBoxContainer2/BackButton" to="." method="_on_BackButton_button_up"]
[connection signal="button_up" from="VBoxContainer/TabContainer/Primary/HBoxContainer2/PWeaponAddButton" to="VBoxContainer/TabContainer/Primary" method="_on_PWeaponAddButton_button_up"]
[connection signal="button_up" from="VBoxContainer/TabContainer/Primary/HBoxContainer2/PWeaponRemoveButton" to="VBoxContainer/TabContainer/Primary" method="_on_PWeaponRemoveButton_button_up"]
